[metadata]
name = mibplugin
version = 0.0.1
description = A standalone package that compiles mibs standalone.
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = mib, snmp
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    requests
    pysnmp-bw
    GitPython